tenzir/integration/data/reference/parser/test_functions/step_02.ref
error: expected one of: identifier, dollar identifier, `this`, `not`, `_`, number, `true`, `false`, `null`, string, datetime, `-`, `(`, `)`, `{`, `[`
 --> /dev/stdin:1:9
  |
1 | a = b(c,,)
  |         ^ got `,`
  |